[package]
name = "runtoclass"
version = "0.1.0"
authors = ["chickensalt <nsdj.sharma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
notify-rust = "4"
chrono = "0.4"